# hermes-trace

./: CHANGELOG.md  LICENSE  README.md  plugin.yaml  pyproject.toml
hermes_trace/: __init__.py  cli.py  tracer.py
tests/: conftest.py  test_tracer.py
