[project]
name = "hermes_trace"
version = "0.1.0"
description = "Hermes plugin that builds trace graphs of agent execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
]

[project.entry-points."hermes_agent.plugins"]
hermes-trace = "hermes_trace"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
